--- a/MobilePOS/res/layout/inventory_main.xml
+++ b/MobilePOS/res/layout/inventory_main.xml
@@ -75,4 +75,18 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <ListView
+            android:id="@+id/inventory_itemlist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" >
+        </ListView>
+
+    </LinearLayout>
+
 </LinearLayout>
