--- a/MobilePOS/res/layout/inventory_additem.xml
+++ b/MobilePOS/res/layout/inventory_additem.xml
@@ -1,95 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/inventoryAddMoreProductT"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="17dp"
-        android:layout_y="20dp"
-        android:text="Add More Product"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="272dp"
+           android:gravity="center_vertical"
+           android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/inventoryAMPBrandT"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="17dp"
-        android:layout_y="60dp"
-        android:text="Brand :" />
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:gravity="center"
+               android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/inventoryAMPPriceT"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="17dp"
-        android:layout_y="210dp"
-        android:text="Price :" />
+               <TextView
+                   android:id="@+id/inventory_t_addmoreproduct"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="Add More Product"
+                   android:textAppearance="?android:attr/textAppearanceLarge" />
+           </LinearLayout>
 
-    <TextView
-        android:id="@+id/inventoryAMPNameT"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="17dp"
-        android:layout_y="110dp"
-        android:text="Name :" />
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/inventoryAMPSpecT"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="17dp"
-        android:layout_y="260dp"
-        android:text="Spec :" />
+               <TextView
+                   android:id="@+id/inventory_t_amp_qnty"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="Quantity :"
+                   android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <TextView
-        android:id="@+id/inventoryAMPQuantityT"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="17dp"
-        android:layout_y="150dp"
-        android:text="Quantity :" />
+               <EditText
+                   android:id="@+id/inventory_f_amp_qnty"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_weight="1"
+                   android:ems="10" />
+           </LinearLayout>
 
-    <EditText
-        android:id="@+id/invetoryAMPBrandTF"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="70dp"
-        android:layout_y="60dp"
-        android:ems="10" />
-    
-     <EditText
-        android:id="@+id/invetoryAMPNameTF"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="70dp"
-        android:layout_y="110dp"
-        android:ems="10" />
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:orientation="horizontal" >
+
+               <TextView
+                   android:id="@+id/inventory_t_amp_price"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="Price :"
+                   android:textAppearance="?android:attr/textAppearanceMedium" />
+
+               <EditText
+                   android:id="@+id/inventory_f_amp_price"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_weight="1"
+                   android:ems="10" />
+           </LinearLayout>
+
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:orientation="horizontal" >
+
+               <TextView
+                   android:id="@+id/inventory_t_amp_name"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="Name :"
+                   android:textAppearance="?android:attr/textAppearanceMedium" />
+
+               <EditText
+                   android:id="@+id/inventory_f_amp_name"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_weight="1"
+                   android:ems="10" />
+           </LinearLayout>
+
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:orientation="horizontal" >
+
+               <TextView
+                   android:id="@+id/inventory_t_amp_brand"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="Brand :"
+                   android:textAppearance="?android:attr/textAppearanceMedium" />
+
+               <EditText
+                   android:id="@+id/inventory_f_amp_brand"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_weight="1"
+                   android:ems="10" />
+           </LinearLayout>
+           
+           
+             <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:gravity="right"
+           android:orientation="horizontal" >
+
+           <Button
+               android:id="@+id/Button01"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="Confirm" />
+
+           <Button
+               android:id="@+id/inventory_b_reset"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="Reset" />
+       </LinearLayout>
+           
+           
+       </LinearLayout>
+
      
-      <EditText
-        android:id="@+id/invetoryAMPPriceTF"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="70dp"
-        android:layout_y="160dp"
-        android:ems="10" />
-      
-       <EditText
-        android:id="@+id/invetoryAMPQuantityTF"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="70dp"
-        android:layout_y="210dp"
-        android:ems="10" />
        
-        <EditText
-            android:id="@+id/invetoryAMPSpecTF"
-            android:layout_width="wrap_content"
-            android:layout_height="115dp"
-            android:layout_x="70dp"
-            android:layout_y="260dp"
-            android:ems="10" />
-
-</AbsoluteLayout>
+      </LinearLayout>
+    
