--- a/MobilePOS/res/layout/inventory_main.xml
+++ b/MobilePOS/res/layout/inventory_main.xml
@@ -72,9 +72,9 @@
 
         <ListView
             android:id="@+id/inventory_itemlist"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" >
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
         </ListView>
     </LinearLayout>
 
