--- a/MobilePOS/res/layout/sale_main.xml
+++ b/MobilePOS/res/layout/sale_main.xml
@@ -43,39 +43,81 @@
             android:textSize="12sp" />
     </LinearLayout>
 
+    
+     <LinearLayout
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:gravity="center"
+         android:orientation="horizontal" >
+
+          <TextView
+                   android:id="@+id/sale_main_t_cart"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="Cart"
+                   android:textAppearance="?android:attr/textAppearanceMedium" 
+                    android:textSize="30sp"/>
+       
+
+             
+    </LinearLayout>
+    	
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
-        <Button
-            android:id="@+id/inventory_b_additem"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_weight="0.50"
-            android:text="Add"
-            android:textSize="12sp" />
+     
+
+          <TextView
+                   android:id="@+id/sale_main_t_price_total"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="Total Price :"
+                   android:textAppearance="?android:attr/textAppearanceMedium" 
+                    android:textSize="30sp"/>
+
+           <TextView
+               android:id="@+id/sale_main_t_price_total_cal"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="xxx.-"
+               android:textAppearance="?android:attr/textAppearanceMedium"
+               
+               android:textSize="30sp" />
+             
+    </LinearLayout>
+     
+     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
 
         <Button
-            android:id="@+id/inventory_b_search"
+            android:id="@+id/sale_main_b_add_cart"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_weight="0.50"
-            android:text="Search"
+            android:text="Add item to cart"
             android:textSize="12sp" />
     </LinearLayout>
-
-    <LinearLayout
+    
+     
+      <LinearLayout
         android:layout_width="267dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
         <ListView
-            android:id="@+id/inventory_itemlist"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:id="@+id/sale_main_itemlist"
+            android:layout_width="match_parent"
+            android:layout_height="328dp" >
 
         </ListView>
+   
+
+  
     </LinearLayout>
+    
 
 </LinearLayout>
