--- a/MobilePOS/res/layout/sale_item_in_inventory.xml
+++ b/MobilePOS/res/layout/sale_item_in_inventory.xml
@@ -37,7 +37,9 @@
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="Cancel" />
+               
+                android:text="Cancel"
+                 android:textSize="10sp" />
 
         </LinearLayout>
 
@@ -56,7 +58,7 @@
             <ListView
                 android:id="@+id/sale_iii_itemlist"
                 android:layout_width="match_parent"
-                android:layout_height="419dp" >
+                android:layout_height="wrap_content" >
             </ListView>
         </LinearLayout>
     </LinearLayout>
