--- a/MobilePOS/res/layout/sale_item_in_inventory.xml
+++ b/MobilePOS/res/layout/sale_item_in_inventory.xml
@@ -38,7 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                
-                android:text="Cancel"
+                android:text="Back to cart"
                  android:textSize="10sp" />
 
         </LinearLayout>
