--- a/MobilePOS/res/layout/inventory_additem.xml
+++ b/MobilePOS/res/layout/inventory_additem.xml
@@ -37,7 +37,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <EditText
-                android:id="@+id/inventory_amp_f_id"
+                android:id="@+id/inventory_amp_f_productid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -106,7 +106,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="true"
-                    android:text="Box(s)" />
+                    android:text="Box(es)" />
 
                 <RadioButton
                     android:id="@+id/inventory_amp_rb_piece"
@@ -115,7 +115,7 @@
                     android:text="Piece(s)" />
             </RadioGroup>
         </LinearLayout>
-
+		
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -142,17 +142,47 @@
                 android:id="@+id/inventory_amp_t_buyqntytype"
                 android:layout_width="89dp"
                 android:layout_height="wrap_content"
-                android:text="Box(s)"
+                android:text="Box(es)"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </LinearLayout>
+          <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="horizontal" >
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+           <TextView
+               android:id="@+id/inventory_amp_t_buypricebathpertype"
+               android:layout_width="89dp"
+               android:layout_height="wrap_content"
+               android:layout_weight="0.52"
+               android:text="Baht/Box: "
+               android:textAppearance="?android:attr/textAppearanceMedium" />
+
+           <EditText
+               android:id="@+id/inventory_amp_f_buypricebathperbox"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:ems="10"
+               android:inputType="number" >
+
+               <requestFocus />
+           </EditText>
+       </LinearLayout>
+         <LinearLayout
+          
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:orientation="horizontal" >
+
+             <TextView
+                 android:id="@+id/inventory_amp_t_pieceperbox"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:text="Pieces/Box :"
+                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <EditText
-                android:id="@+id/inventory_amp_f_buyprice"
+                android:id="@+id/inventory_amp_f_pieceperbox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -161,13 +191,9 @@
                 <requestFocus />
             </EditText>
 
-            <TextView
-                android:id="@+id/inventory_amp_t_buyprice"
-                android:layout_width="89dp"
-                android:layout_height="wrap_content"
-                android:text="Baht/Box(s)"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
         </LinearLayout>
+
+      
 
         <LinearLayout
             android:layout_width="match_parent"
