--- a/MobilePOS/res/layout/inventory_additem.xml
+++ b/MobilePOS/res/layout/inventory_additem.xml
@@ -145,29 +145,28 @@
                 android:text="Box(es)"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </LinearLayout>
+
           <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:orientation="horizontal" >
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="horizontal" >
 
-           <TextView
-               android:id="@+id/inventory_amp_t_buypricebathpertype"
-               android:layout_width="89dp"
-               android:layout_height="wrap_content"
-               android:layout_weight="0.52"
-               android:text="Baht/Box: "
-               android:textAppearance="?android:attr/textAppearanceMedium" />
+              <TextView
+                  android:id="@+id/inventory_amp_t_buypricebathpertype"
+                  android:layout_width="89dp"
+                  android:layout_height="wrap_content"
+                  android:text="Baht/Box :"
+                  android:textAppearance="?android:attr/textAppearanceMedium" />
 
-           <EditText
-               android:id="@+id/inventory_amp_f_buypricebathperbox"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:ems="10"
-               android:inputType="number" >
+              <EditText
+                  android:id="@+id/inventory_amp_f_buypricebathperbox"
+                  android:layout_width="0dp"
+                  android:layout_height="wrap_content"
+                  android:layout_weight="1.04"
+                  android:ems="10"
+                  android:inputType="number" />
+          </LinearLayout>
 
-               <requestFocus />
-           </EditText>
-       </LinearLayout>
          <LinearLayout
           
              android:layout_width="match_parent"
