--- a/MobilePOS/res/layout/inventory_additem.xml
+++ b/MobilePOS/res/layout/inventory_additem.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="right"
     android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_vertical"
+        android:gravity="bottom|center_vertical|right"
         android:orientation="vertical" >
 
         <LinearLayout
@@ -58,10 +59,11 @@
 
             <EditText
                 android:id="@+id/inventory_amp_f_name"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10" />
+                android:ems="10"
+                android:gravity="center_vertical" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -144,6 +146,7 @@
                 android:layout_height="wrap_content"
                 android:text="Box(es)"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
+
         </LinearLayout>
 
           <LinearLayout
@@ -192,37 +195,6 @@
 
         </LinearLayout>
 
-      
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:id="@+id/inventory_amp_t_buyprice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Buy ฺPrice :"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-
-            <TextView
-                android:id="@+id/inventory_amp_t_calbuyprice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="  -  "
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-
-          
-
-            <TextView
-                android:id="@+id/inventory_amp_t_buypriceperpiece"
-                android:layout_width="89dp"
-                android:layout_height="wrap_content"
-                android:text="Baht/Piece"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-        </LinearLayout>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -248,8 +220,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="right"
+            android:layout_height="69dp"
+            android:gravity="bottom|right"
             android:orientation="horizontal" >
 
             <Button
@@ -264,6 +236,35 @@
                 android:layout_height="wrap_content"
                 android:text="Cancel" />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="bottom|end|right"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/inventory_amp_t_buyprice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Buy ฺPrice :"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+            <TextView
+                android:id="@+id/inventory_amp_t_calbuyprice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="  -  "
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <TextView
+                android:id="@+id/inventory_amp_t_buypriceperpiece"
+                android:layout_width="89dp"
+                android:layout_height="wrap_content"
+                android:text="Baht/Piece"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+        </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
