--- a/MobilePOS/res/layout/inventory_additem.xml
+++ b/MobilePOS/res/layout/inventory_additem.xml
@@ -42,6 +42,14 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10" />
+
+            <Button
+                android:id="@+id/inventory_amp_b_check"
+                 style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="33dp"
+                android:text="Check" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -219,6 +227,14 @@
                 android:layout_height="wrap_content"
                 android:text="Baht/Piece"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
+
+            <Button
+                android:id="@+id/inventory_amp_b_calculate"
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:text="Calculate" />
+
         </LinearLayout>
 
         <LinearLayout
