--- a/MobilePOS/res/layout/inventory_additem.xml
+++ b/MobilePOS/res/layout/inventory_additem.xml
@@ -45,10 +45,32 @@
 
             <Button
                 android:id="@+id/inventory_amp_b_check"
-                 style="?android:attr/buttonStyleSmall"
+                style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
-                android:layout_height="33dp"
+                android:layout_height="34dp"
                 android:text="Check" />
+
+            <Button
+                android:id="@+id/scan_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/scan" />
+            
+            <TextView
+		        android:id="@+id/scan_format"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:textIsSelectable="true"
+		        android:layout_centerHorizontal="true"
+		        android:layout_below="@id/scan_button" /> 
+        
+        	<TextView
+		        android:id="@+id/scan_content"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:textIsSelectable="true"
+		        android:layout_centerHorizontal="true"
+		        android:layout_below="@id/scan_format" />
 
         </LinearLayout>
 
@@ -278,6 +300,7 @@
                 android:layout_height="wrap_content"
                 android:text="Cancel" />
         </LinearLayout>
+       
     </LinearLayout>
 
 </LinearLayout>
